--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -462,8 +462,8 @@ terminal .terminal-output > div {
         background-color: var(--background, #000);
     }
     .terminal .font {
-        width: calc(var(--size) * 1em);
-        height: calc(var(--size) * 1em);
+        width: calc(var(--size, 1) * 1em);
+        height: calc(var(--size, 1) * 1em);
     }
     .terminal span[style*="--length"] {
         width: calc(var(--length, 1) * var(--char-width) * 1px);
